Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12818

C99 format specifiers

    XMLWordPrintable

Details

    • 990cedeb1b5e3c492c7ca9316ec81cf5eb2f7ac1

    Description

      The following code causes a syntax error:

      test.c
      #include <stdio.h>
      #include <inttypes.h>
      
      int main(void)
      {
          uint64_t i = 4;
          printf("output: %"PRIu64" \n", i);
          return 0;
      }
      

      This is a MinGW specific problem (works under Linux), since these constants are only defined in MinGW's inttypes.h when __cplusplus is not defined.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            yvvan Ivan Donchevskii
            eszlari Peter Eszlari
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes